// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Case documents uploaded 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <div>
      <span
        className="css-la2m3t"
      >
        W2
      </span>
      <SimplePopover
        text="W2 tax form"
      >
        <UNDEFINED
          classes={
            Object {
              "root": "css-bmph1p",
            }
          }
          style={
            Object {
              "color": "#828796",
              "width": 16,
            }
          }
        />
      </SimplePopover>
    </div>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              abc.png
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
          <ForwardRef(render)
            onClick={[Function]}
          >
            Remove all (
            2
            )
          </ForwardRef(render)>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              def.pdf
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              ghi.jpg
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload  W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={2}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case documents uploaded 1 large document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <div>
      <span
        className="css-la2m3t"
      >
        W2
      </span>
      <SimplePopover
        text="W2 tax form"
      >
        <UNDEFINED
          classes={
            Object {
              "root": "css-bmph1p",
            }
          }
          style={
            Object {
              "color": "#828796",
              "width": 16,
            }
          }
        />
      </SimplePopover>
    </div>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              abc.png
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
          <ForwardRef(render)
            onClick={[Function]}
          >
            Remove all (
            2
            )
          </ForwardRef(render)>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              def.pdf
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              ghi.jpg
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload  W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={2}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case documents uploaded 2`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <div>
      <span
        className="css-la2m3t"
      >
        W2
      </span>
      <SimplePopover
        text="W2 tax form"
      >
        <UNDEFINED
          classes={
            Object {
              "root": "css-bmph1p",
            }
          }
          style={
            Object {
              "color": "#828796",
              "width": 16,
            }
          }
        />
      </SimplePopover>
    </div>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              abc.png
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
          <ForwardRef(render)
            onClick={[Function]}
          >
            Remove all (
            2
            )
          </ForwardRef(render)>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              def.pdf
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              ghi.jpg
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload  W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={2}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case documents uploaded 2 large document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <div>
      <span
        className="css-la2m3t"
      >
        W2
      </span>
      <SimplePopover
        text="W2 tax form"
      >
        <UNDEFINED
          classes={
            Object {
              "root": "css-bmph1p",
            }
          }
          style={
            Object {
              "color": "#828796",
              "width": 16,
            }
          }
        />
      </SimplePopover>
    </div>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              abc.png
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-type-title"
        >
          <span>
            W2
          </span>
          <ForwardRef(render)
            onClick={[Function]}
          >
            Remove all (
            2
            )
          </ForwardRef(render)>
        </div>
        <ForwardRef(render)>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              def.pdf
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
          <div
            className="uploaded-document-display"
          >
            <ForwardRef(render)>
              ghi.jpg
            </ForwardRef(render)>
            <ForwardRef(render)
              onClick={[Function]}
            >
              Remove
            </ForwardRef(render)>
          </div>
        </ForwardRef(render)>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload  W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={2}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case multiple required document (require all) 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <div>
      <span
        className="css-la2m3t"
      >
        W2 + 1099 Form
      </span>
      <SimplePopover
        text="W2 tax form"
      >
        <UNDEFINED
          classes={
            Object {
              "root": "css-bmph1p",
            }
          }
          style={
            Object {
              "color": "#828796",
              "width": 16,
            }
          }
        />
      </SimplePopover>
    </div>
    <ForwardRef(render) />
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 1 W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={3}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 1 1099 Form
          <input
            accept="image/*,.pdf"
            id="2"
            max={1}
            multiple={true}
            name="2"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case no uploaded documents 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <div>
      <span
        className="css-la2m3t"
      >
        W2
      </span>
      <SimplePopover
        text="W2 tax form"
      >
        <UNDEFINED
          classes={
            Object {
              "root": "css-bmph1p",
            }
          }
          style={
            Object {
              "color": "#828796",
              "width": 16,
            }
          }
        />
      </SimplePopover>
    </div>
    <ForwardRef(render) />
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 1 W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={3}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case only one required document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <div>
      <span
        className="css-la2m3t"
      >
        W2
      </span>
      <SimplePopover
        text="W2 tax form"
      >
        <UNDEFINED
          classes={
            Object {
              "root": "css-bmph1p",
            }
          }
          style={
            Object {
              "color": "#828796",
              "width": 16,
            }
          }
        />
      </SimplePopover>
    </div>
    <ForwardRef(render) />
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 1 W2
          <input
            accept="image/*,.pdf"
            id="1"
            max={3}
            multiple={true}
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case require one of multiple document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(WithStyles)
      component="fieldset"
    >
      <ForwardRef(RadioGroup)
        aria-label="documents"
        className="css-weqa2y"
        name="documents"
        onChange={[Function]}
        value={null}
      >
        <div>
          <ForwardRef(WithStyles)
            control={<ForwardRef(WithStyles) />}
            disabled={false}
            id="radioButton2"
            label="1099 Form"
            value={0}
          />
          <SimplePopover
            text="1099 IRS Tax Form"
          >
            <UNDEFINED
              classes={
                Object {
                  "root": "css-bmph1p",
                }
              }
              style={
                Object {
                  "color": "#828796",
                  "width": 16,
                }
              }
            />
          </SimplePopover>
        </div>
        <div>
          <ForwardRef(WithStyles)
            control={<ForwardRef(WithStyles) />}
            disabled={false}
            id="radioButton3"
            label="3 Paystubs"
            value={1}
          />
          <SimplePopover
            text="3 latest pay-stubs"
          >
            <UNDEFINED
              classes={
                Object {
                  "root": "css-bmph1p",
                }
              }
              style={
                Object {
                  "color": "#828796",
                  "width": 16,
                }
              }
            />
          </SimplePopover>
        </div>
      </ForwardRef(RadioGroup)>
    </ForwardRef(WithStyles)>
  </React.Fragment>
</React.Fragment>
`;
